--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,31 +3,22 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 ext {
-  tools_version = '3.2.1'
   support_version = '27.0.2'
-//  kotlin_version = '1.2.71'
-
-  anko_version = '0.10.1'
   retrofit_version = '2.3.0'
   rxbinding_version = '2.0.0'
-  autodispose_version = '0.4.0'
-  dagger_version = '2.11'
 }
 
-
 android {
-  compileSdkVersion 28
+  compileSdkVersion 29
 
   defaultConfig {
     applicationId "xyz.ryabov.sample.mvi"
 
     minSdkVersion 21
-    targetSdkVersion 28
+    targetSdkVersion 29
 
     versionCode 1
     versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
   buildTypes {
@@ -41,12 +32,12 @@ android {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-  implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
-  implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-  implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'androidx.core:core-ktx:1.3.0'
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+  implementation 'androidx.cardview:cardview:1.0.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
   implementation 'com.squareup.retrofit2:retrofit:' + retrofit_version
   implementation 'com.squareup.retrofit2:converter-moshi:' + retrofit_version
@@ -54,16 +45,9 @@ dependencies {
   implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
   implementation 'com.squareup.moshi:moshi-adapters:1.4.0' // 1.5.0 doesn't work well with Kotlin/Generics
 
-
-  implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
-  implementation 'android.arch.lifecycle:viewmodel:1.1.1'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
   implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
   implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:' + rxbinding_version
-
-
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
