--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 ext {
   support_version = '27.0.2'
+  coroutines_version = '1.3.7'
   retrofit_version = '2.3.0'
   rxbinding_version = '2.0.0'
 }
@@ -33,14 +34,24 @@ android {
   }
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+  kotlinOptions {
+    freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi"
+    freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.FlowPreview"
+  }
+}
+
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:' + coroutines_version
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.core:core-ktx:1.3.0'
   implementation 'androidx.activity:activity-ktx:1.1.0'
 
   implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
   implementation 'androidx.cardview:cardview:1.0.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation 'androidx.recyclerview:recyclerview:1.1.0'
