--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
     versionName "1.0"
   }
 
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+
   buildTypes {
     release {
       minifyEnabled false
@@ -34,6 +38,8 @@ dependencies {
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.core:core-ktx:1.3.0'
+  implementation 'androidx.activity:activity-ktx:1.1.0'
+
   implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
   implementation 'androidx.cardview:cardview:1.0.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
